<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.habitburtsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.habitburtsapp.ui.habits.HabitsFragment"
        android:label="@string/habits"
        tools:layout="@layout/fragment_habits" />

    <fragment
        android:id="@+id/nav_current"
        android:name="com.example.habitburtsapp.ui.current.CurrentFragment"
        android:label="@string/current"
        tools:layout="@layout/fragment_current" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.habitburtsapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>