<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Habit name TextView -->
    <TextView
        android:id="@+id/habit_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_details"
        android:textSize="18sp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <!-- Spacer View (Blank Line) -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Habit description TextView -->
    <TextView
        android:id="@+id/habit_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:paddingBottom="8dp" />

    <!-- Spacer View (Blank Line) -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Habit time TextView -->

    <TextView
        android:id="@+id/habit_details_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_details"
        android:textSize="18sp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <!-- Spacer View (Blank Line) -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Button to start -->
    <Button
        android:id="@+id/start_challenge_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/start_habit_challenge"
        android:backgroundTint="#2196F3" />

    <!-- Button to close -->
    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:backgroundTint="#2196F3" />

</LinearLayout>
